# diff.bzl

./: .bazelrc  .bazelversion  .gitattributes  .pre-commit-config.yaml  CONTRIBUTING.md  MODULE.bazel  README.md  build.sh  diff.bzl  go.mod
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: buildifier.yaml  ci.yaml  conventional-commits.yaml  publish.yaml  release.yaml  release_prep.sh
diff/: BUILD  BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
diff/private/: BUILD  BUILD.bazel  cmp.bzl  cmp.manual.txt  diff.bzl  diff3.bzl  diff3.manual.txt  options.bzl  resolved_toolchain.bzl  sdiff.bzl  sdiff.manual.txt  toolchains_repo.bzl  versions.bzl
diff/tests/: BUILD  BUILD.bazel  case_cmp_different_binary.b  case_cmp_same_binary.b  case_cmp_verbose.b  case_context.golden.patch  case_directory.golden.patch  case_directory_newfile.golden.patch  case_directory_recursive.golden.patch  case_from_file.golden.patch  case_normal.golden.patch  case_recursive.golden.patch  case_to_file.golden.patch  case_to_file_directory.golden.patch  case_to_file_directory_newfile.golden.patch  case_unified.golden.patch  case_unified_multifile.golden.patch  some_file.txt
diff/tests/case.3.dir_a/: file.txt.rej
diff/tests/case_directory_recursive.b/subfolder/: cow.txt
diff/tests/dir1/: fileA
diff/toolchain/: BUILD
diffutils/: BUILD  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
diffutils/private/: BUILD  diff.bzl  diff.manual.txt  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
diffutils/tests/: BUILD
diffutils/tests/case.3.dir_b/: cow.txt
diffutils/toolchain/: BUILD
docs/: BUILD.bazel  cmp.md  diff.md  extensions.md  patching_source_files.md  rules.md
e2e/cmp_validate_override/: .bazelrc  BUILD  README.md  a
e2e/diff_validate_override/: README.md  WORKSPACE.bazel
e2e/diffutils_from_source/: BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel
e2e/diffutils_from_source/toolchain/: BUILD.bazel
e2e/smoke/: BUILD  BUILD.bazel  MODULE.bazel  README.md
e2e/smoke/tools/toolchains/: BUILD
e2e/validate_override/: .bazelrc  BUILD  BUILD.bazel  MODULE.bazel  README.md
examples/: BUILD  build-and-patch.sh  build.sh  foo.pb.go  foo.proto  foo_test.go
examples/go_proto_library/: README.md  foo.pb.go  foo_test.go  test.sh
examples/multiple-files/: BUILD  diff_files.bzl
tools/toolchains/: BUILD
