"Bazel dependencies"

module(name = "diff.bzl")

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "package_metadata", version = "0.0.6")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_lib", version = "3.0.0")

########################################################
# diff.bzl development dependencies
########################################################

bazel_dep(name = "diffutils", version = "3.12", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1", dev_dependency = True)
bazel_dep(name = "bazelrc-preset.bzl", version = "1.6.0", dev_dependency = True)

diffutils = use_extension("//diff:extensions.bzl", "diffutils")
diffutils.toolchain()
use_repo(diffutils, "diffutils_toolchains")

register_toolchains("@diffutils_toolchains//:all")
