load("@stardoc//stardoc:stardoc.bzl", "stardoc")
load("//diff:defs.bzl", "diff")

stardoc(
    name = "rules_doc",
    out = "rules.md.out",
    input = "//diff:defs.bzl",
    symbol_names = [
        "cmp",
        "diff",
    ],
    visibility = ["//docs:__pkg__"],
    deps = ["//diff:defs"],
)

diff(
    name = "rules",
    args = ["--unified"],
    file1 = "rules.md",
    file2 = ":rules_doc",
    validate = 1,
)

stardoc(
    name = "extensions_doc",
    out = "extensions.md.out",
    input = "//diff:extensions.bzl",
    visibility = ["//docs:__pkg__"],
    deps = ["//diff:extensions"],
)

diff(
    name = "extensions",
    args = ["--unified"],
    file1 = "extensions.md",
    file2 = ":extensions_doc",
    validate = 1,
)
