load("@stardoc//stardoc:stardoc.bzl", "stardoc")
load("//diff:defs.bzl", "diff")

stardoc(
    name = "rules_doc",
    out = "rules.md.out",
    input = "//diff:defs.bzl",
    symbol_names = [
        "cmp",
        "diff",
    ],
    visibility = ["//docs:__pkg__"],
    deps = ["//diff:defs"],
)

diff(
    name = "rules",
    srcs = [
        "rules.md",
        ":rules_doc",
    ],
    args = ["--unified"],
    validate = 1,
)

stardoc(
    name = "extensions_doc",
    out = "extensions.md.out",
    input = "//diff:extensions.bzl",
    visibility = ["//docs:__pkg__"],
    deps = ["//diff:extensions"],
)

diff(
    name = "extensions",
    srcs = [
        "extensions.md",
        ":extensions_doc",
    ],
    args = ["--unified"],
    validate = 1,
)
