load("@bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("@bazel_skylib//lib:partial.bzl", "partial")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("//diff:defs.bzl", "cmp", "diff")

diff(
    name = "case_normal",
    args = ["--normal"],
    file1 = partial.make(
        write_file,
        content = [
            "moo",
            "",
        ],
    ),
    file2 = partial.make(
        write_file,
        content = [
            "cow",
            "",
        ],
    ),
)

diff(
    name = "case_normal_assert_patch",
    file1 = "case_normal.golden.patch",
    file2 = ":case_normal",
    validate = 1,
)

diff(
    name = "case_unified",
    args = ["--unified"],
    file1 = partial.make(
        write_file,
        content = [
            "moo",
            "",
        ],
    ),
    file2 = partial.make(
        write_file,
        content = [
            "cow",
            "",
        ],
    ),
)

diff(
    name = "case_unified_assert_patch",
    file1 = "case_unified.golden.patch",
    file2 = ":case_unified",
    validate = 1,
)

diff(
    name = "case_unified_mulitfile",
    args = ["--unified"],
    file1 = [
        "case_unified_multifile_patch.a1",
        "case_unified_multifile_patch.a2",
    ],
    file2 = [
        "case_unified_multifile_patch.b1",
        "case_unified_multifile_patch.b2",
    ],
)

diff(
    name = "case_unified_mulitfile_assert_patch",
    file1 = "case_unified_multifile.golden.patch",
    file2 = ":case_unified_mulitfile",
    validate = 1,
)

diff(
    name = "case_context",
    args = ["--context"],
    file1 = partial.make(
        write_file,
        content = [
            "moo",
            "",
        ],
    ),
    file2 = partial.make(
        write_file,
        content = [
            "cow",
            "",
        ],
    ),
)

diff(
    name = "case_context_assert_patch",
    file1 = "case_context.golden.patch",
    file2 = ":case_context",
    validate = 1,
)

diff(
    name = "case_recursive",
    args = [
        "--recursive",
        "--new-file",
        "--unified",
    ],
    file1 = "case_recursive.dir_a",
    file2 = "case_recursive.dir_b",
)

diff(
    name = "case_recursive_assert_patch",
    file1 = "case_recursive.golden.patch",
    file2 = ":case_recursive",
    validate = 1,
)

diff(
    name = "case_recursive_empty_dirs",
    args = [
        "--recursive",
        "--unified",
    ],
    file1 = partial.make(
        copy_to_directory,  # Create an empty directory
    ),
    file2 = partial.make(
        copy_to_directory,  # Create an empty directory
    ),
    validate = 1,
)

genrule(
    name = "case_diff_genrule",
    srcs = [],
    outs = ["diff_help.txt"],
    cmd = "$(DIFF_BIN) --help > $@",
    toolchains = ["@diff.bzl//diff/toolchain:execution_type"],
)

genrule(
    name = "case_cmp_genrule",
    srcs = [],
    outs = ["cmp_help.txt"],
    cmd = "$(CMP_BIN) --help > $@",
    toolchains = ["@diff.bzl//diff/toolchain:execution_type"],
)

cmp(
    name = "case_cmp_same_binary",
    file1 = "case_cmp_same_binary.a",
    file2 = "case_cmp_same_binary.b",
    validate = 1,
)

cmp(
    name = "case_cmp_different_binary",
    file1 = "case_cmp_different_binary.a",
    file2 = "case_cmp_different_binary.b",
)

diff(
    name = "case_cmp_different_binary_assert_output",
    file1 = ":case_cmp_different_binary",
    file2 = partial.make(
        write_file,
        content = [
            "diff/tests/case_cmp_different_binary.a diff/tests/case_cmp_different_binary.b differ: char 1, line 1",
            "",
        ],
    ),
    validate = 1,
)

cmp(
    name = "case_cmp_verbose",
    args = ["--verbose"],
    file1 = "case_cmp_verbose.a",
    file2 = "case_cmp_verbose.b",
)

diff(
    name = "case_cmp_verbose_assert_output",
    file1 = ":case_cmp_verbose",
    file2 = partial.make(
        write_file,
        content = [
            "1 125  10",
            "2 142  77",
            "3  46 171",
            "4  41 312",
            "5  62 134",
            "6 315 353",
            "7 231 360",
            "8 231 167",
            "",
        ],
    ),
    validate = 1,
)

build_test(
    name = "build_test",
    targets = [
        ":case_normal",
        ":case_normal_assert_patch",
        ":case_unified",
        ":case_unified_assert_patch",
        ":case_context",
        ":case_context_assert_patch",
        ":case_recursive",
        ":case_recursive_assert_patch",
        ":case_recursive_empty_dirs",
        ":case_diff_genrule",
        ":case_cmp_genrule",
        ":case_cmp_same_binary",
        ":case_cmp_different_binary",
        ":case_cmp_different_binary_assert_output",
        ":case_cmp_verbose",
        ":case_cmp_verbose_assert_output",
    ],
)
