load("@bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("@bazel_skylib//lib:partial.bzl", "partial")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("//diff:defs.bzl", "cmp", "diff")

diff(
    name = "case_normal",
    srcs = [
        partial.make(
            write_file,
            content = [
                "moo",
                "",
            ],
        ),
        partial.make(
            write_file,
            content = [
                "cow",
                "",
            ],
        ),
    ],
    args = ["--normal"],
)

diff(
    name = "case_normal_assert_patch",
    srcs = [
        "case_normal.golden.patch",
        ":case_normal",
    ],
    validate = 1,
)

diff(
    name = "case_unified",
    srcs = [
        partial.make(
            write_file,
            content = [
                "moo",
                "",
            ],
        ),
        partial.make(
            write_file,
            content = [
                "cow",
                "",
            ],
        ),
    ],
    args = ["--unified"],
)

diff(
    name = "case_unified_assert_patch",
    srcs = [
        "case_unified.golden.patch",
        ":case_unified",
    ],
    validate = 1,
)

diff(
    name = "case_context",
    srcs = [
        partial.make(
            write_file,
            content = [
                "moo",
                "",
            ],
        ),
        partial.make(
            write_file,
            content = [
                "cow",
                "",
            ],
        ),
    ],
    args = ["--context"],
)

diff(
    name = "case_context_assert_patch",
    srcs = [
        "case_context.golden.patch",
        ":case_context",
    ],
    validate = 1,
)

diff(
    name = "case_directory",
    srcs = [
        "case_directory.a",
        "case_directory.b",
    ],
    args = [
        "--unified",
    ],
)

diff(
    name = "case_directory_assert_patch",
    srcs = [
        "case_directory.golden.patch",
        ":case_directory",
    ],
    validate = 1,
)

diff(
    name = "case_directory_newfile",
    srcs = [
        "case_directory_newfile.a",
        "case_directory_newfile.b",
    ],
    args = [
        "--new-file",
        "--unified",
    ],
)

diff(
    name = "case_directory_newfile_assert_patch",
    srcs = [
        "case_directory_newfile.golden.patch",
        ":case_directory_newfile",
    ],
    validate = 1,
)

diff(
    name = "case_directory_recursive",
    srcs = [
        "case_directory_recursive.a",
        "case_directory_recursive.b",
    ],
    args = [
        "--recursive",
        "--unified",
    ],
)

diff(
    name = "case_directory_recursive_assert_patch",
    srcs = [
        "case_directory_recursive.golden.patch",
        ":case_directory_recursive",
    ],
    validate = 1,
)

diff(
    name = "case_directory_empty_dirs",
    srcs = [
        partial.make(
            copy_to_directory,  # Create an empty directory
        ),
        partial.make(
            copy_to_directory,  # Create an empty directory
        ),
    ],
    args = [
        "--unified",
    ],
    validate = 1,
)

diff(
    name = "case_from_file",
    srcs = [
        "case_from_file.a",
        "case_from_file.b",
        "case_from_file.c",
    ],
    args = [
        "--unified",
        "--from-file",
        "$(execpath case_from_file.a)",
    ],
)

diff(
    name = "case_from_file_assert_patch",
    srcs = [
        "case_from_file.golden.patch",
        ":case_from_file",
    ],
    validate = 1,
)

diff(
    name = "case_to_file",
    srcs = [
        "case_to_file.a",
        "case_to_file.b",
        "case_to_file.c",
    ],
    args = [
        "--unified",
        "--to-file",
        "$(execpath case_to_file.a)",
    ],
)

diff(
    name = "case_to_file_assert_patch",
    srcs = [
        "case_to_file.golden.patch",
        ":case_to_file",
    ],
    validate = 1,
)

diff(
    name = "case_to_file_directory",
    srcs = [
        "case_to_file_directory.a",
        "case_to_file_directory.b",
        "case_to_file_directory.c",
    ],
    args = [
        "--unified",
        "--to-file",
        "$(execpath case_to_file_directory.a)",
    ],
)

diff(
    name = "case_to_file_directory_assert_patch",
    srcs = [
        "case_to_file_directory.golden.patch",
        ":case_to_file_directory",
    ],
    validate = 1,
)

diff(
    name = "case_to_file_directory_newfile",
    srcs = [
        "case_to_file_directory_newfile.a",
        "case_to_file_directory_newfile.b",
        "case_to_file_directory_newfile.c",
    ],
    args = [
        "--unified",
        "--new-file",
        "--to-file",
        "$(execpath case_to_file_directory_newfile.a)",
    ],
)

diff(
    name = "case_to_file_directory_newfile_assert_patch",
    srcs = [
        "case_to_file_directory_newfile.golden.patch",
        ":case_to_file_directory_newfile",
    ],
    validate = 1,
)

genrule(
    name = "case_diff_genrule",
    srcs = [],
    outs = ["diff_help.txt"],
    cmd = "$(DIFF_BIN) --help > $@",
    toolchains = ["@diff.bzl//diff/toolchain:execution_type"],
)

genrule(
    name = "case_cmp_genrule",
    srcs = [],
    outs = ["cmp_help.txt"],
    cmd = "$(CMP_BIN) --help > $@",
    toolchains = ["@diff.bzl//diff/toolchain:execution_type"],
)

cmp(
    name = "case_cmp_same_binary",
    srcs = [
        "case_cmp_same_binary.a",
        "case_cmp_same_binary.b",
    ],
    validate = 1,
)

cmp(
    name = "case_cmp_different_binary",
    srcs = [
        "case_cmp_different_binary.a",
        "case_cmp_different_binary.b",
    ],
)

diff(
    name = "case_cmp_different_binary_assert_output",
    srcs = [
        ":case_cmp_different_binary",
        partial.make(
            write_file,
            content = [
                "diff/tests/case_cmp_different_binary.a diff/tests/case_cmp_different_binary.b differ: char 1, line 1",
                "",
            ],
        ),
    ],
    validate = 1,
)

cmp(
    name = "case_cmp_verbose",
    srcs = [
        "case_cmp_verbose.a",
        "case_cmp_verbose.b",
    ],
    args = ["--verbose"],
)

diff(
    name = "case_cmp_verbose_assert_output",
    srcs = [
        ":case_cmp_verbose",
        partial.make(
            write_file,
            content = [
                "1 125  10",
                "2 142  77",
                "3  46 171",
                "4  41 312",
                "5  62 134",
                "6 315 353",
                "7 231 360",
                "8 231 167",
                "",
            ],
        ),
    ],
    validate = 1,
)

build_test(
    name = "build_test",
    targets = [
        ":case_normal",
        ":case_normal_assert_patch",
        ":case_unified",
        ":case_unified_assert_patch",
        ":case_context",
        ":case_context_assert_patch",
        ":case_directory",
        ":case_directory_assert_patch",
        ":case_directory_newfile",
        ":case_directory_newfile_assert_patch",
        ":case_directory_recursive",
        ":case_directory_recursive_assert_patch",
        ":case_directory_empty_dirs",
        ":case_from_file",
        ":case_from_file_assert_patch",
        ":case_to_file",
        ":case_to_file_assert_patch",
        ":case_to_file_directory",
        ":case_to_file_directory_assert_patch",
        ":case_to_file_directory_newfile",
        ":case_to_file_directory_newfile_assert_patch",
        ":case_diff_genrule",
        ":case_cmp_genrule",
        ":case_cmp_same_binary",
        ":case_cmp_different_binary",
        ":case_cmp_different_binary_assert_output",
        ":case_cmp_verbose",
        ":case_cmp_verbose_assert_output",
    ],
)
