"Test as an external module - intended for BCR presubmit"

bazel_dep(name = "diffutils", version = "3.12")
bazel_dep(name = "diff.bzl")
bazel_dep(name = "bazel_skylib", version = "1.8.2")

local_path_override(
    module_name = "diff.bzl",
    path = "../..",
)

register_toolchains(
    "//toolchain:diffutils_toolchain",
)
