load("@diff.bzl//diff:toolchain.bzl", "diffutils_toolchain")

diffutils_toolchain(
    name = "built",
    cmp_bin = "@diffutils//:cmp",
    diff3_bin = "@diffutils//:diff3",
    diff_bin = "@diffutils//:diff",
    sdiff_bin = "@diffutils//:sdiff",
)

toolchain(
    name = "toolchain",
    toolchain = ":built",
    toolchain_type = "@diff.bzl//diff/toolchain:execution_type",
)
